servicenow/6.11/modules/ROOT/pages/servicenow-reference.adoc
= ServiceNow Connector 6.11 Reference - Mule 4
:page-aliases: connectors::servicenow/servicenow-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for ServiceNow (ServiceNow Connector) provides connections between Mule runtime engine (Mule) and ServiceNow apps.


[[config]]
== Configuration

Default Configuration for ServiceNow Connector.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic-connection, Basic Authentication>>
* <<config_oauth2-auth-code-connection, OAuth 2.0 Authorization Code>>
 | Connection types for this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

[[config_basic-connection]]
=== Basic Authentication Connection Type

Basic authentication.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Service Address a| String |  Address of the ServiceNow service. |  | x
| ServiceNow Version a| Enumeration, one of:

** EUREKA
** FUJI
** GENEVA
** HELSINKI
** ISTANBUL
** JAKARTA
** KINGSTON
** MADRID
** NEW_YORK
** ORLANDO
** PARIS
** QUEBEC
** ROME |  ServiceNow API Version. |  `ROME` |
| User Tables List a| Array of String |  List of user-defined tables. |  |
| Encoding a| String | Character encoding. |  `UTF-8` |
| User Name a| String |  Username. |  | x
| Password a| String |  Password. |  | x
| Transport Configuration a| One of:

* <<http-requester-based-transport-provider>>
* <<basic-auth-http-message-dispatcher-provider>> | Transport configuration. |  |
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  WSS configuration for the signature security strategy. |  |
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  WSS configuration for the username token security strategy. |  |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool. |  |
|===

[[config_oauth2-auth-code-connection]]
=== OAuth 2.0 Authorization Code Connection Type

OAuth 2.0 authorization code.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Service Address a| String |  Address of ServiceNow service. |  | x
| ServiceNow Version a| Enumeration, one of:

** EUREKA
** FUJI
** GENEVA
** HELSINKI
** ISTANBUL
** JAKARTA
** KINGSTON
** MADRID
** NEW_YORK
** ORLANDO
** PARIS
** QUEBEC
** ROME |  ServiceNow API Version. |  `ROME` |
| User Tables List a| Array of String |  List of user-defined tables. |  |
| Encoding a| String | Character encoding. |  `UTF-8` |
| Custom Transport Configuration a| <<oauth2-http-message-dispatcher-provider>> | Custom transport configuration. |  |
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  WSS configuration for the signature security strategy. |  |
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  Username token WSS configuration. |  |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
| Consumer Key a| String | OAuth consumer key, as registered with the service provider. |  | x
| Consumer Secret a| String |  OAuth consumer secret, as registered with the service provider. |  | x
| Authorization Url a| String | URL of the service provider's authorization endpoint. |  `+https://{instance-id}.service-now.com/oauth_auth.do+` |
| Access Token Url a| String |  URL of the service provider's access token endpoint. |  `+https://{instance-id}.service-now.com/oauth_token.do+` |
| Scopes a| String |  OAuth scopes to request during the OAuth dance. This value defaults to the scopes in the annotation. |  |
| Resource Owner Id a| String |  Resource owner ID to use with the authorization code grant type.  |  |
| Before a| String |  Name of the flow to execute immediately before starting the OAuth dance. |  |
| After a| String |  Name of the flow to execute immediately after receiving an access token. |  |
| Listener Config a| String |  Configuration for the HTTP listener that listens for requests on the access token callback endpoint. |  | x
| Callback Path a| String |  Path of the access token callback endpoint. |  | x
| Authorize Path a| String |  Path of the local HTTP endpoint that triggers the OAuth dance. |  | x
| External Callback Url a| String |  URL that the OAuth provider uses to access the callback endpoint if the endpoint is behind a proxy or accessed through an indirect URL. |  |
| Object Store a| String |  Configures the object store that stores data for each resource owner. If not configured, Mule uses the default object store. |  |
|===


== Sources

* <<new-or-updated-record-listener>>


[[new-or-updated-record-listener]]
=== On New/Updated Record
`<servicenow:new-or-updated-record-listener>`

Efficiently polls periodically for changes in the selected table and accepts only new records into the flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| ServiceNow Time Zone a| String | Timezone. | `America/Los_Angeles` |
| Table name a| String | Name of the table from which to retrieve the records. |  | x
| Query a| String | Optional query that filters the result set. The syntax is `sysparm_query=<col_name><operator><value>`. All parameters are case-sensitive. Queries can contain more than one entry, such as `<col_name><operator><value>[<operator><col_name><operator><value>]`. |  |
| Display system references a| String a| Data retrieval operation for reference and choice fields. Retrieves the display value or the actual value from the database. Valid values are:

* `true`
+
Returns the display values for all fields.

* `false`
+
Returns the actual values from the database.

* `all`
+
Returns both the actual and display values. | `FALSE` |
| Exclude reference links a| Boolean | Flag that indicates whether to exclude table API links for reference fields. | `false` |
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Scheduling Strategy a| Scheduling Strategy | Configures the scheduler that triggers the polling. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* Non-repeatable Stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> | Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a| Binary
| Attributes Type a| <<SoapAttributes>>
|===

==== Associated Configurations

* <<config>>

== Operations

* <<invoke>>
* <<unauthorize>>


[[invoke]]
=== Invoke
`<servicenow:invoke>`

Default operation for ServiceNow SOAP invocations.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use.  | | x
| Service a| String | Service name. |  | x
| Operation a| String |  Operation name of the service. |  | x
| Show Reference Values a| String | Chooses which values are returned for reference fields. Possible options are to return `sys_ids` or `display value` or both. Use this option only for `get` and `getRecords` operations. |  |
| Body a| Binary | XML body to include in the SOAP message, with all the required parameters, or `null` if no parameters are required. |  `#[payload]` |
| Headers a| Binary |  XML headers to include in the SOAP message. |  |
| Attachments a| Object |  Attachments to include in the SOAP request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

==== Associated Configurations
* <<config>>

==== Throws
* SERVICENOW:RETRY_EXHAUSTED
* SERVICENOW:SOAP_FAULT
* SERVICENOW:PROCESSING_ERROR
* SERVICENOW:BAD_RESPONSE
* SERVICENOW:TIMEOUT
* SERVICENOW:CONNECTIVITY
* SERVICENOW:BAD_REQUEST
* SERVICENOW:CANNOT_DISPATCH
* SERVICENOW:INVALID_WSDL
* SERVICENOW:ENCODING


[[unauthorize]]
=== Unauthorize
`<servicenow:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it is impossible to execute any operation for that user without repeating the OAuth dance.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Resource Owner Id a| String |  ID of the resource owner for whom to invalidate access. |  |
|===

==== Associated Configurations
* <<config>>


== Object Types

* <<basic-auth-http-message-dispatcher-provider>>
* <<ExpirationPolicy>>
* <<http-requester-based-transport-provider>>
* <<oauth2-http-message-dispatcher-provider>>
* <<PoolingProfile>>
* <<reconnect>>
* <<reconnect-forever>>
* <<Reconnection>>
* <<RedeliveryPolicy>>
* <<repeatable-file-store-stream>>
* <<repeatable-in-memory-stream>>
* <<SoapAttributes>>
* <<SoapOutputEnvelope>>
* <<wss-key-store-configuration>>
* <<WssSignSecurityStrategyAdapter>>
* <<WssSignConfigurationAdapter>>
* <<WssUsernameTokenSecurityStrategyAdapter>>


[[basic-auth-http-message-dispatcher-provider]]
=== Basic Authentication HTTP Message Dispatcher Provider

Default HTTP transport configuration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | Username to use. |  | x
| Password a| String | Password to use. |  | x
| Read Timeout a| Number | Read timeout value. | `5000` |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Read Timeout* field. | `MILLISECONDS` |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[http-requester-based-transport-provider]]
=== HTTP Requester Based Transport Provider

Custom HTTP transport configuration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Requester Config a| String | Requester configuration. |  | x
|===

[[oauth2-http-message-dispatcher-provider]]
=== OAuth2 HTTP Message Dispatcher Provider

OAuth transport configuration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Read Timeout a| Number | Read timeout value. | `5000` |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Read Timeout* field. | `MILLISECONDS` |
|===

[[PoolingProfile]]
=== Pooling Profile

Pooling profile type.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that is borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that is active at one time. When the specified value for *Max Active* is exceeded, the pool is considered exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that sits idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that is idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the *Exhausted Action* is set to `WHEN_EXHAUSTED_WAIT`. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object sits idle in the pool before it is eligible for eviction. When non-positive, no objects are evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL a| Specifies the behavior of the Mule component pool when the pool is exhausted:

* `WHEN_EXHAUSTED_GROW` +
Creates a new Mule instance and returns it, which makes *Max Active* ineffective.
* `WHEN_EXHAUSTED_WAIT` +
Blocks by invoking `Object.wait(long)` until a new or idle object is available.
* `WHEN_EXHAUSTED_FAIL` +
Throws a `NoSuchElementException`.

If a positive *Max Wait* value is supplied, it blocks for, at most, that many milliseconds, after which a `NoSuchElementException` is thrown. If *Max Thread Wait* is a negative value, it blocks indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL a| Determines how to initialize components in a pool:

* `INITIALISE_NONE` +
Does not load any components into the pool on startup.
* `INITIALISE_ONE` +
Loads one initial component into the pool on startup.
* `INITIALISE_ALL` +
Loads all components in the pool on startup. |
| Disabled a| Boolean | Determines whether to disable pooling. |  |
|===

[[reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
|===

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean a| What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<reconnect-forever>> | Reconnection strategy to use. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  |
| Message Identifier a| Redelivery Policy Message Identifier | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  |
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number a| Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[SoapAttributes]]
=== SOAP Attributes

Attributes returned by the consume operation. Carries the protocol specific headers (such as HTTP headers) and additional transport data (such as the HTTP status line) bounded to the response.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Additional Transport Data a| Object | Additional transport data bundled in the response. |  |
| Protocol Headers a| Object | Protocol headers bundled in the response. |  |
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope

Represents the response of the consume operation. Bundles the SOAP body, SOAP headers, and MIME attachments if there are any.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object | Set of attachments bounded to the response, or an empty map if there are no attachments. |  |
| Body a| Binary | XML response body. Represents the <SOAP:BODY> element. |  |
| Headers a| Object | Set of XML SOAP headers. Represents the content in the <SOAP:HEADERS> element. |  |
|===

[[wss-key-store-configuration]]
=== Wss Key Store Configuration

Implementation for keystores, used for encryption, decryption, and signing.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Path a| String | Location of the keystore file. |  | x
| Alias a| String | Alias of the private key to use. |  |
| Password a| String | Password to access the store. |  | x
| Key Password a| String | Password used to access the private key. |  |
| Type a| String | Type of store, such as `fjks`, `pkcs12`, `jceks`, and so on. | `jks` |
|===

[[WssSignSecurityStrategyAdapter]]
=== Wss Sign Security Strategy Adapter

Signs the SOAP request that is sent, using the private key of the keystore in the provided TLS context.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | Keystore to use when signing the message. |  | x
| Sign Algorithm Configuration a| <<WssSignConfigurationAdapter>> | Algorithms to use on the signing. |  |
|===

[[WssSignConfigurationAdapter]]
=== WSS Signing Configuration Adapter

Group that holds the configuration for signing algorithms used in the sign security strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Signature Key Identifier a| Enumeration, one of:

** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER | Key identifier type to use for the signature. | `X509_KEY_IDENTIFIER` |
| Signature Algorithm a| Enumeration, one of:

** RSAwithSHA1
** RSAwithSHA224
** RSAwithSHA256
** RSAwithSHA384
** RSAwithSHA512 | Signature algorithm to use. The default is set by the data in the certificate. |  |
| Signature Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA224
** SHA384
** SHA512 | Signature digest algorithm to use. | `SHA1` |
| Signature C14n Algorithm a| Enumeration, one of:

** CanonicalXML_1_0
** CanonicalXML_1_1
** ExclusiveXMLCanonicalization_1_0 | Defines which signature c14n (canonicalization) algorithm to use. | `ExclusiveXMLCanonicalization_1_0` |
|===

[[WssUsernameTokenSecurityStrategyAdapter]]
=== WSS Username Token Security Strategy Adapter

Provides the capability to authenticate with a SOAP service using a username and a password by adding the UsernameToken
element in the SOAP request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | Username required to authenticate with the service. |  | x
| Password a| String | Password for the provided username required to authenticate with the service. |  | x
| Password Type a| Enumeration, one of:

** DIGEST
** TEXT | Password parameter. | `DIGEST` |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
